Fix Alignment in Modal

--- a/app/globals.css
+++ b/app/globals.css
@@ -421,6 +421,10 @@ body {
 @media only screen and (min-width: 1200px) {
   .modal-positioning > div:nth-child(3) {
     width: 1200px !important;
+    top: "50%";
+    left: "50%";
+    transform: "translate(-50%, -50%)";
+    margin-bottom: "10px";
   }
 }
 .sidebar-icon {
